--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>scroll</title>
   <link rel="stylesheet" href="css/style.css">
+  <script defer src="js/anime.js"></script>
   <script defer src="js/scroll.js"></script>
 </head>
 
 <body>
-  <h1>0</h1>
 
   <main>
     <section></section>
