scroll event html 수정

--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
 <body>
 
   <main>
-    <section></section>
-    <section></section>
+    <section class="on"></section>
+    <section>
+      <article></article>
+      <article></article>
+      <article></article>
+      <article></article>
+    </section>
+
     <section></section>
     <section></section>
   </main>
