--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>scroll</title>
+  <title>scroll steps</title>
   <link rel="stylesheet" href="css/style.css">
+  <script src="https://kit.fontawesome.com/0ac8b4c1ba.js" crossorigin="anonymous"></script>
   <script defer src="js/anime.js"></script>
   <script defer src="js/scroll.js"></script>
 </head>
 
 <body>
-
   <main>
     <section class="on"></section>
+
     <section>
       <article>
         <svg viewBox="0 0 576 512">
@@ -23,11 +24,14 @@
           </path>
         </svg>
       </article>
-
     </section>
-    <article></article>
-    <section></section>
-    <section></section>
+
+    <section>
+      <article></article>
+      <article></article>
+      <article></article>
+    </section>
+
 
     <section>
       <article>
